--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div class="col-lg-3 mb-2">
                     <div class="service-item rounded p-5 mb-4">
                         <i class="fa fa-3x fa fa-users text-primary mb-4"></i>
-                        <h4 class="text-uppercase mb-4">Affilate <span class="d-block text-body">Marketing</span></h4>
+                        <h4 class="text-uppercase mb-4">Affiliate <span class="d-block text-body">Marketing</span></h4>
                         <p class="m-0">Earn commission by promoting products you love with our affiliate program.</p>
                     </div>
                 </div>
